force-app/main/default/objects/Account/fields/Account_Email__c.field-meta.xml
<CustomField>
    <fullName>Account_Email__c</fullName>
    <inlineHelpText>This is a generic email address for the company as a whole. E.g. Reception@valueretail.com or Info@valueretail.com</inlineHelpText>
    <label>Account Email</label>
    <type>Email</type>
</CustomField>