force-app/main/default/objects/Account/fields/Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager__c</fullName>
    <description>(Tourism Field)</description>
    <inlineHelpText>The contact at Value Retail (inc. Sales reps), who is the main point of contact for this account</inlineHelpText>
    <label>Account Manager</label>
    <length>255</length>
    <type>Text</type>
</CustomField>