force-app/main/default/objects/Account/fields/Account_Manager_Contact_Only__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager_Contact_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check field if Private Client is not to be contacted directly.</inlineHelpText>
    <label>Contact via Account Manager or PA</label>
    <type>Checkbox</type>
</CustomField>