force-app/main/default/objects/Account/fields/Account_Name_unique__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_unique__c</fullName>
    <description>(B2T) This field is populated using a workflow rule (edit) on the Account object. Because it&apos;s a Unique field it stops duplicate Tourism records from being entered</description>
    <label>Account Name unique</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>