force-app/main/default/objects/Account/fields/Account_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Reference_Number__c</fullName>
    <displayFormat>{000000000}</displayFormat>
    <label>Account Reference Number</label>
    <type>AutoNumber</type>
</CustomField>