force-app/main/default/objects/Account/fields/Age_Range__c.field-meta.xml
<CustomField>
    <fullName>Age_Range__c</fullName>
    <label>Age Range</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>18-24</fullName>
            </value>
            <value>
                <fullName>25 - 34</fullName>
            </value>
            <value>
                <fullName>35 - 44</fullName>
            </value>
            <value>
                <fullName>45 - 54</fullName>
            </value>
            <value>
                <fullName>55-64</fullName>
            </value>
            <value>
                <fullName>65+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>