force-app/main/default/objects/Account/fields/Agency__c.field-meta.xml
<CustomField>
    <fullName>Agency__c</fullName>
    <description>This is linked to the third party portal that is controlled under Accounts</description>
    <formula>ISPICKVAL( Partner_Sub_Category__c , &quot;Agency&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is linked to the third party portal that is controlled under Accounts</inlineHelpText>
    <label>Agency</label>
    <type>Checkbox</type>
</CustomField>