force-app/main/default/objects/Account/fields/Airmiles_FFP_information_All_guests__c.field-meta.xml
<CustomField>
    <fullName>Airmiles_FFP_information_All_guests__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Confirm if the Guest has claimed Airmiles</inlineHelpText>
    <label>Airmiles/FFP information (All guests)</label>
    <type>Checkbox</type>
</CustomField>