force-app/main/default/objects/Account/fields/Archive__c.field-meta.xml
<CustomField>
    <fullName>Archive__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick checkbox to move this record into the archive (not deleted completely but not visible in some views/reports)</inlineHelpText>
    <label>Archive</label>
    <type>Checkbox</type>
</CustomField>