force-app/main/default/objects/Account/fields/Assignment_Type__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Type__c</fullName>
    <description>The assignment type of the brand</description>
    <inlineHelpText>The assignment type of the brand</inlineHelpText>
    <label>Assignment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Local Village</fullName>
            </value>
            <value>
                <fullName>Group Retail</fullName>
            </value>
            <value>
                <fullName>Multi-Village</fullName>
            </value>
            <value>
                <fullName>No Village</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>