force-app/main/default/objects/Account/fields/Assistant_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Assistant_Email_Address__c</fullName>
    <description>The guests PA email address.</description>
    <inlineHelpText>The email address of the Private Client’s PA</inlineHelpText>
    <label>PA Email</label>
    <type>Email</type>
</CustomField>