force-app/main/default/objects/Account/fields/Average_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Average_Engagement__c</fullName>
    <label>Average Engagement</label>
    <length>100</length>
    <type>Text</type>
</CustomField>