force-app/main/default/objects/Account/fields/B2B_Insights__c.field-meta.xml
<CustomField>
    <fullName>B2B_Insights__c</fullName>
    <label>B2B Insights</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>