force-app/main/default/objects/Account/fields/BarcodeNumber__c.field-meta.xml
<CustomField>
    <fullName>BarcodeNumber__c</fullName>
    <externalId>true</externalId>
    <label>BarcodeNumber</label>
    <length>38</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>