force-app/main/default/objects/Account/fields/Blog_Authority__c.field-meta.xml
<CustomField>
    <fullName>Blog_Authority__c</fullName>
    <label>Blog Authority</label>
    <length>255</length>
    <type>Text</type>
</CustomField>