force-app/main/default/objects/Account/fields/Brand_Advocate__c.field-meta.xml
<CustomField>
    <fullName>Brand_Advocate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Brand Advocate</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Brands4</relationshipName>
    <type>Lookup</type>
</CustomField>