force-app/main/default/objects/Account/fields/Brand_Advocate_Secondary__c.field-meta.xml
<CustomField>
    <fullName>Brand_Advocate_Secondary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Brand Advocate</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Brands5</relationshipName>
    <type>Lookup</type>
</CustomField>