force-app/main/default/objects/Account/fields/Brand_Feedback_on_Safe_Retailing__c.field-meta.xml
<CustomField>
    <fullName>Brand_Feedback_on_Safe_Retailing__c</fullName>
    <inlineHelpText>Enter any feedback you may have from the brand in relation to Safe Retailing</inlineHelpText>
    <label>Brand Feedback on Safe Retailing</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>