force-app/main/default/objects/Account/fields/Brand_Gender__c.field-meta.xml
<CustomField>
    <fullName>Brand_Gender__c</fullName>
    <description>The gender that the brand targets</description>
    <inlineHelpText>The gender that the brand targets</inlineHelpText>
    <label>Brand Gender</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Women’s</fullName>
            </value>
            <value>
                <fullName>Men’s</fullName>
            </value>
            <value>
                <fullName>Children’s</fullName>
            </value>
            <value>
                <fullName>Mixed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>