force-app/main/default/objects/Account/fields/Brand_Guest_Relevance__c.field-meta.xml
<CustomField>
    <fullName>Brand_Guest_Relevance__c</fullName>
    <description>The main geographic markets the brand resonates with</description>
    <inlineHelpText>The main geographic markets the brand resonates with. Select one or more</inlineHelpText>
    <label>Brand Guest Relevance</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>China</fullName>
            </value>
            <value>
                <fullName>Europe</fullName>
            </value>
            <value>
                <fullName>India</fullName>
            </value>
            <value>
                <fullName>Middle East</fullName>
            </value>
            <value>
                <fullName>North America</fullName>
            </value>
            <value>
                <fullName>Russia</fullName>
            </value>
            <value>
                <fullName>Central &amp; South America</fullName>
            </value>
            <value>
                <fullName>South East Asia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>