force-app/main/default/objects/Account/fields/Brand_ID__c.field-meta.xml
<CustomField>
    <fullName>Brand_ID__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Enter the ID of this brand on a related system e.g. MRI</inlineHelpText>
    <label>MRI Brand ID</label>
    <length>12</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>