force-app/main/default/objects/Account/fields/Brand_Space_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Brand_Space_Requirements__c</fullName>
    <inlineHelpText>Select if the Brand is requesting new space requirements</inlineHelpText>
    <label>Brand Space Requirements</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>More Space</fullName>
            </value>
            <value>
                <fullName>Less Space</fullName>
            </value>
            <value>
                <fullName>Same Space</fullName>
            </value>
            <value>
                <fullName>Do Not Know Yet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>