force-app/main/default/objects/Account/fields/Brand_Subsegment__c.field-meta.xml
<CustomField>
    <fullName>Brand_Subsegment__c</fullName>
    <description>The subsegmentation details for the brand</description>
    <inlineHelpText>The subsegmentation details for the brand</inlineHelpText>
    <label>Brand Subsegment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Apparel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>