force-app/main/default/objects/Account/fields/Brand_VR_Positioning__c.field-meta.xml
<CustomField>
    <fullName>Brand_VR_Positioning__c</fullName>
    <description>The target market position for the brand.</description>
    <inlineHelpText>The target market position for the brand.</inlineHelpText>
    <label>Brand VR Positioning</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lifestyle</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
            <value>
                <fullName>Luxury</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>