force-app/main/default/objects/Account/fields/Budget_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Budget_Start_Date__c</fullName>
    <label>Budget Start Date</label>
    <length>60</length>
    <type>Text</type>
</CustomField>