force-app/main/default/objects/Account/fields/Business_Profile__c.field-meta.xml
<CustomField>
    <fullName>Business_Profile__c</fullName>
    <inlineHelpText>Influencer/Social - “Influencers with social media accounts only”
Influencer/Social and Blogger - “Influencers with dedicated blog&quot;</inlineHelpText>
    <label>Business Profile</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Influencer_Social</fullName>
                <label>Influencer/Social</label>
            </value>
            <value>
                <fullName>Influencer_Social_Blogger</fullName>
                <label>Influencer/Social and Blogger</label>
            </value>
            <value>
                <fullName>Promotional_Ambassador</fullName>
                <label>Promotional Ambassador</label>
            </value>
            <value>
                <fullName>Agency</fullName>
            </value>
            <value>
                <fullName>Local</fullName>
            </value>
            <value>
                <fullName>PR</fullName>
            </value>
            <value>
                <fullName>Media/Sponsorship</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>