force-app/main/default/objects/Account/fields/Car_Registration__c.field-meta.xml
<CustomField>
    <fullName>Car_Registration__c</fullName>
    <label>Car Registration</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>