force-app/main/default/objects/Account/fields/Children__c.field-meta.xml
<CustomField>
    <fullName>Children__c</fullName>
    <description>The children of the guest</description>
    <inlineHelpText>Enter relevant information about Private Clients children</inlineHelpText>
    <label>Private Client’s Children</label>
    <type>TextArea</type>
</CustomField>