force-app/main/default/objects/Account/fields/Children_Child__c.field-meta.xml
<CustomField>
    <fullName>Children_Child__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The guest has a child/children</description>
    <inlineHelpText>The guest has a child/children</inlineHelpText>
    <label>Child</label>
    <type>Checkbox</type>
</CustomField>