force-app/main/default/objects/Account/fields/Children_Infant__c.field-meta.xml
<CustomField>
    <fullName>Children_Infant__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The guest has an infant child/children</description>
    <inlineHelpText>The guest has an infant child/children</inlineHelpText>
    <label>Infant</label>
    <type>Checkbox</type>
</CustomField>