force-app/main/default/objects/Account/fields/Children_None__c.field-meta.xml
<CustomField>
    <fullName>Children_None__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The guest has no children</description>
    <inlineHelpText>The guest has no children</inlineHelpText>
    <label>None</label>
    <type>Checkbox</type>
</CustomField>