force-app/main/default/objects/Account/fields/Children_Teen__c.field-meta.xml
<CustomField>
    <fullName>Children_Teen__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The guest has a teen aged child/children</description>
    <inlineHelpText>The guest has a teen aged child/children</inlineHelpText>
    <label>Teen</label>
    <type>Checkbox</type>
</CustomField>