force-app/main/default/objects/Account/fields/China_Brand_Captain__c.field-meta.xml
<CustomField>
    <fullName>China_Brand_Captain__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>China Brand Captain</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Brands2</relationshipName>
    <type>Lookup</type>
</CustomField>