force-app/main/default/objects/Account/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <description>The company that the Guest works for</description>
    <inlineHelpText>The company the Private Client works for</inlineHelpText>
    <label>Company Name / Job Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>