force-app/main/default/objects/Account/fields/Company_Role_Position__c.field-meta.xml
<CustomField>
    <fullName>Company_Role_Position__c</fullName>
    <description>The Guests Job title or position</description>
    <inlineHelpText>The Guests Job title or position (if applicable)</inlineHelpText>
    <label>Company Role or Position</label>
    <length>100</length>
    <type>Text</type>
</CustomField>