force-app/main/default/objects/Account/fields/Consent_Process_Data__c.field-meta.xml
<CustomField>
    <fullName>Consent_Process_Data__c</fullName>
    <inlineHelpText>The method in which the guest has consented to us holding there data for processing.</inlineHelpText>
    <label>Consent to Process Data</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Village</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Verbal</fullName>
            </value>
            <value>
                <fullName>Historic</fullName>
                <isActive>false</isActive>
                <label>Historic</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>