force-app/main/default/objects/Account/fields/Contact_via_Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact_via_Primary_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contact via Primary Contact Point Only</label>
    <type>Checkbox</type>
</CustomField>