force-app/main/default/objects/Account/fields/Customer_GUID__c.field-meta.xml
<CustomField>
    <fullName>Customer_GUID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Customer GUID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>