force-app/main/default/objects/Account/fields/Customer_Pyramid__c.field-meta.xml
<CustomField>
    <fullName>Customer_Pyramid__c</fullName>
    <label>Customer Pyramid</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Style Connoisseurs</fullName>
            </value>
            <value>
                <fullName>Style Chic</fullName>
            </value>
            <value>
                <fullName>Style Addicts</fullName>
            </value>
            <value>
                <fullName>Value Seekers (Indifferent)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>