force-app/main/default/objects/Account/fields/Date_Permission_given__c.field-meta.xml
<CustomField>
    <fullName>Date_Permission_given__c</fullName>
    <description>The date that the guest gave permission to hold this data</description>
    <inlineHelpText>Date/Time &apos;Consent to Process&apos; preference updated.</inlineHelpText>
    <label>Consent to Process Data Date</label>
    <type>DateTime</type>
</CustomField>